--- a/Cice.csproj
+++ b/Cice.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\Questions\asadsdasdasd.xml" />
     <Content Include="Content\CSS\normilize.css" />
     <Content Include="Content\CSS\style.css" />
     <Content Include="Content\Images\back_sprite.png" />
@@ -104,15 +105,18 @@
     <Content Include="Content\Images\title_qaa.png" />
     <Content Include="Content\Images\tm_border.png" />
     <Content Include="Content\Images\vk.png" />
+    <Content Include="Docs\TasksBase.txt" />
+    <Content Include="Docs\Nodes.txt" />
     <Content Include="Global.asax" />
     <Content Include="Scripts\fancybox\jquery.fancybox.css" />
     <Content Include="Scripts\fancybox\jquery.fancybox.pack.js" />
     <Content Include="Scripts\html5shiv.js" />
     <Content Include="Scripts\jquery.js" />
     <Content Include="Scripts\main.js" />
-    <Content Include="Tasks.txt" />
+    <Content Include="Docs\TasksCurrent.txt" />
     <Content Include="Views\Faq\Index.aspx" />
     <Content Include="Views\Faq\Question.aspx" />
+    <Content Include="Views\Shared\Pages.ascx" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -140,9 +144,7 @@
     <Content Include="Views\Shared\Site.Master" />
     <Content Include="Views\Web.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
