--- a/Cice.csproj
+++ b/Cice.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\QuestionsBase.txt" />
     <Content Include="App_Data\Questions\asadsdasdasd.xml" />
     <Content Include="Content\CSS\normilize.css" />
     <Content Include="Content\CSS\style.css" />
