--- a/Cice.csproj
+++ b/Cice.csproj
@@ -75,7 +75,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\QuestionsBase.txt" />
-    <Content Include="App_Data\Questions\asadsdasdasd.xml" />
     <Content Include="Content\CSS\normilize.css" />
     <Content Include="Content\CSS\style.css" />
     <Content Include="Content\Images\back_sprite.png" />
@@ -150,7 +149,9 @@
     <Content Include="Views\Shared\Site.Master" />
     <Content Include="Views\Web.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="App_Data\Questions\" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
