--- a/Cice.csproj
+++ b/Cice.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\FaqModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\ViewHelpers.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\CSS\normilize.css" />
