rm cap test rm connection string

--- a/Web.config
+++ b/Web.config
@@ -30,9 +30,7 @@
 		<add key="admin_password_double_hash" value="C2426FA2883DA821717CBE63485461CC" />
 	</appSettings>
 
-	<connectionStrings>
-		<add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient"/>
-	</connectionStrings>
+	<connectionStrings/>
 
 	<system.web>
 
@@ -61,7 +59,7 @@
 						ASP.NET to identify an incoming user. 
 		-->
 		<authentication mode="Forms">
-			<forms loginUrl="~/Account/LogOn" timeout="2880" />
+			<forms loginUrl="~/Account/" timeout="2880" />
 		</authentication>
 
 		<membership>
