--- a/Cice.csproj
+++ b/Cice.csproj
@@ -65,7 +65,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\AccountController.cs" />
-    <Compile Include="Controllers\CapController.cs" />
     <Compile Include="Controllers\FaqController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
@@ -77,24 +76,65 @@
     <Compile Include="Views\ViewHelpers.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\CSS\main.css" />
     <Content Include="Content\CSS\normilize.css" />
     <Content Include="Content\CSS\style.css" />
+    <Content Include="Content\Images\about_cice_title.jpg" />
+    <Content Include="Content\Images\active_pic_01.jpg" />
+    <Content Include="Content\Images\active_pic_02.jpg" />
+    <Content Include="Content\Images\active_pic_03.jpg" />
+    <Content Include="Content\Images\active_pic_04.jpg" />
+    <Content Include="Content\Images\active_title.jpg" />
+    <Content Include="Content\Images\all_good.jpg" />
+    <Content Include="Content\Images\backGradline.gif" />
+    <Content Include="Content\Images\backGradlineBL.gif" />
+    <Content Include="Content\Images\backGradlineBLB.jpg" />
+    <Content Include="Content\Images\backGradlineBR.gif" />
+    <Content Include="Content\Images\backGradlineBRB.jpg" />
+    <Content Include="Content\Images\backGradlineTL.jpg" />
+    <Content Include="Content\Images\backGradlineTR.jpg" />
+    <Content Include="Content\Images\backGradlineVertical.gif" />
     <Content Include="Content\Images\back_sprite.png" />
     <Content Include="Content\Images\btn_sprite.png" />
+    <Content Include="Content\Images\button_back.jpg" />
+    <Content Include="Content\Images\button_back_green.jpg" />
+    <Content Include="Content\Images\button_back_sky.jpg" />
+    <Content Include="Content\Images\button_left_basket.jpg" />
+    <Content Include="Content\Images\button_left_round.png" />
+    <Content Include="Content\Images\button_right_round.png" />
     <Content Include="Content\Images\but_bg.png" />
     <Content Include="Content\Images\but_hover.png" />
     <Content Include="Content\Images\capcha.png" />
     <Content Include="Content\Images\capcha_sprite.png" />
     <Content Include="Content\Images\cice_mini_logo.gif" />
+    <Content Include="Content\Images\cice_title.jpg" />
+    <Content Include="Content\Images\clinic_centrum.jpg" />
     <Content Include="Content\Images\com_cont_but.png" />
     <Content Include="Content\Images\com_cont_h.png" />
     <Content Include="Content\Images\com_q.png" />
     <Content Include="Content\Images\copy_btn.png" />
     <Content Include="Content\Images\copy_btn_h.png" />
+    <Content Include="Content\Images\day_good.jpg" />
     <Content Include="Content\Images\facebook.png" />
+    <Content Include="Content\Images\formulapic.jpg" />
+    <Content Include="Content\Images\formula_title.jpg" />
+    <Content Include="Content\Images\garant.jpg" />
+    <Content Include="Content\Images\garant2.jpg" />
+    <Content Include="Content\Images\goods_title.jpg" />
+    <Content Include="Content\Images\grad2.jpg" />
+    <Content Include="Content\Images\grad3.jpg" />
+    <Content Include="Content\Images\grad4.jpg" />
+    <Content Include="Content\Images\grad5.jpg" />
+    <Content Include="Content\Images\grad6.jpg" />
+    <Content Include="Content\Images\grad7.jpg" />
+    <Content Include="Content\Images\icoShop.gif" />
     <Content Include="Content\Images\input_bg.png" />
+    <Content Include="Content\Images\logo.gif" />
     <Content Include="Content\Images\logo.png" />
+    <Content Include="Content\Images\logo_back.png" />
+    <Content Include="Content\Images\logo_cetrum.png" />
     <Content Include="Content\Images\mir.png" />
+    <Content Include="Content\Images\night_good.jpg" />
     <Content Include="Content\Images\other_com_q.png" />
     <Content Include="Content\Images\partners.jpg" />
     <Content Include="Content\Images\pn_bg.png" />
@@ -104,9 +144,45 @@
     <Content Include="Content\Images\qaa_saver.jpg" />
     <Content Include="Content\Images\qaa_saver.png" />
     <Content Include="Content\Images\red.png" />
+    <Content Include="Content\Images\romb1.png" />
+    <Content Include="Content\Images\romb2.png" />
+    <Content Include="Content\Images\romb3.png" />
+    <Content Include="Content\Images\romb4.png" />
+    <Content Include="Content\Images\romb5.png" />
+    <Content Include="Content\Images\romb6.png" />
     <Content Include="Content\Images\share.png" />
+    <Content Include="Content\Images\shop_all.jpg" />
+    <Content Include="Content\Images\shop_bottom_basket.jpg" />
+    <Content Include="Content\Images\shop_button_order.jpg" />
+    <Content Include="Content\Images\shop_item_1.jpg" />
+    <Content Include="Content\Images\shop_item_2.jpg" />
+    <Content Include="Content\Images\shop_item_3.jpg" />
+    <Content Include="Content\Images\shop_item_4.jpg" />
+    <Content Include="Content\Images\shop_item_5.jpg" />
+    <Content Include="Content\Images\shop_item_6.jpg" />
+    <Content Include="Content\Images\shop_item_7.jpg" />
+    <Content Include="Content\Images\shop_title.jpg" />
+    <Content Include="Content\Images\slide1.jpg" />
+    <Content Include="Content\Images\slide2.jpg" />
+    <Content Include="Content\Images\slide3.jpg" />
+    <Content Include="Content\Images\slide4.jpg" />
+    <Content Include="Content\Images\slide5.jpg" />
+    <Content Include="Content\Images\slide6.jpg" />
+    <Content Include="Content\Images\slide7.jpg" />
+    <Content Include="Content\Images\slide8.jpg" />
+    <Content Include="Content\Images\slide_shadow.gif" />
+    <Content Include="Content\Images\text1Effect.jpg" />
+    <Content Include="Content\Images\text2Natural.jpg" />
+    <Content Include="Content\Images\text3Safe.jpg" />
+    <Content Include="Content\Images\text4Cice.jpg" />
+    <Content Include="Content\Images\theory_item_1.jpg" />
+    <Content Include="Content\Images\theory_item_2.jpg" />
+    <Content Include="Content\Images\theory_item_3.jpg" />
+    <Content Include="Content\Images\theory_item_4.jpg" />
+    <Content Include="Content\Images\theory_title.jpg" />
     <Content Include="Content\Images\title_qaa.png" />
     <Content Include="Content\Images\tm_border.png" />
+    <Content Include="Content\Images\topLogos.gif" />
     <Content Include="Content\Images\vk.png" />
     <Content Include="Docs\QuestionDesign\inside_admin_answer.png" />
     <Content Include="Docs\QuestionDesign\inside_admin_no_answer.png" />
@@ -121,9 +197,11 @@
     <Content Include="Scripts\html5shiv.js" />
     <Content Include="Scripts\jquery.js" />
     <Content Include="Docs\TasksCurrent.txt" />
-    <Content Include="Views\Cap\Index.aspx" />
     <Content Include="Views\Faq\Index.aspx" />
     <Content Include="Views\Faq\Question.aspx" />
+    <Content Include="Views\Home\Index.aspx" />
+    <Content Include="Views\Shared\Footer.ascx" />
+    <Content Include="Views\Shared\Header.ascx" />
     <Content Include="Views\Shared\Pages.ascx" />
     <Content Include="Views\Shared\QuestionInfoLine.ascx" />
     <Content Include="Web.config" />
@@ -144,7 +222,6 @@
     <Content Include="Scripts\MicrosoftMvcValidation.debug.js" />
     <Content Include="Views\Account\Index.aspx" />
     <Content Include="Views\Home\About.aspx" />
-    <Content Include="Views\Home\Index.aspx" />
     <Content Include="Views\Shared\Error.aspx" />
     <Content Include="Views\Shared\LogOnUserControl.ascx" />
     <Content Include="Views\Shared\Site.Master" />
@@ -152,6 +229,9 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\Questions\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Shared\MasterPage.master" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
