Init original pages

--- a/Cice.csproj
+++ b/Cice.csproj
@@ -192,16 +192,25 @@
     <Content Include="Docs\Nodes.txt" />
     <Content Include="Global.asax" />
     <Content Include="Libs\Recaptcha.dll" />
+    <Content Include="Scripts\down_slides.js" />
     <Content Include="Scripts\fancybox\jquery.fancybox.css" />
     <Content Include="Scripts\fancybox\jquery.fancybox.pack.js" />
     <Content Include="Scripts\html5shiv.js" />
+    <Content Include="Scripts\index_slider.js" />
     <Content Include="Scripts\jquery.js" />
     <Content Include="Docs\TasksCurrent.txt" />
+    <Content Include="Scripts\jquery.timers-1.2.js" />
     <Content Include="Views\Faq\Index.aspx" />
     <Content Include="Views\Faq\Question.aspx" />
+    <Content Include="Views\Home\Active.aspx" />
+    <Content Include="Views\Home\Formula.aspx" />
+    <Content Include="Views\Home\Goods.aspx" />
     <Content Include="Views\Home\Index.aspx" />
+    <Content Include="Views\Home\Partners.aspx" />
+    <Content Include="Views\Home\Theory.aspx" />
     <Content Include="Views\Shared\Footer.ascx" />
     <Content Include="Views\Shared\Header.ascx" />
+    <Content Include="Views\Shared\HexMenu.ascx" />
     <Content Include="Views\Shared\Pages.ascx" />
     <Content Include="Views\Shared\QuestionInfoLine.ascx" />
     <Content Include="Web.config" />
