--- a/Cice.csproj
+++ b/Cice.csproj
@@ -212,6 +212,7 @@
     <Content Include="Views\Shared\Footer.ascx" />
     <Content Include="Views\Shared\Header.ascx" />
     <Content Include="Views\Shared\HexMenu.ascx" />
+    <Content Include="Views\Shared\MaybeSelectedLink.ascx" />
     <Content Include="Views\Shared\Pages.ascx" />
     <Content Include="Views\Shared\QuestionInfoLine.ascx" />
     <Content Include="Views\Theory\Daily.aspx" />
@@ -239,7 +240,6 @@
     <Content Include="Views\Home\About.aspx" />
     <Content Include="Views\Shared\Error.aspx" />
     <Content Include="Views\Shared\LogOnUserControl.ascx" />
-    <Content Include="Views\Shared\Site.Master" />
     <Content Include="Views\Web.config" />
   </ItemGroup>
   <ItemGroup>
